# Functional-Language-Interpreter

./: .gitignore  CMakeLists.txt  README.md  main.cpp  someRecursiveFunctions.txt
headers/: ASTBinaryFunctionNode.h  ASTLeafNode.h  ASTListNode.h  ASTN_aryFunctionNode.h  ASTNode.h  ASTTernaryFunctionNode.h  ASTUnaryFunctionNode.h  ASTUserFunctionNode.h  fractionalNumberToken.h  functionDefinedListLiteral.h  illegalSyntaxException.h  interpreter.h  lexer.h  listFunc.h  literalType.h  missingCharacterException.h  parser.h  stringConverter.h  token.h  tokenType.h  userDefinedListLiteral.h  wholeNumberLiteral.h
headers/Interpreter/: interpreter.h
headers/Interpreter/Literals/: concatenatedListLiteral.h  finiteListLiteral.h  fractionalNumberLiteral.h  infiniteListLiteral.h  listLiteral.h  literal.h  literalType.h  userDefinedListLiteral.h  wholeNumberLiteral.h
headers/Lexer/: lexer.h
headers/Lexer/Tokens/: argumentToken.h  fractionalNumberToken.h  functionNameToken.h  token.h  tokenType.h  wholeNumberToken.h
headers/ListFunc/: listFunc.h
headers/Parser/: parser.h
headers/Parser/Nodes/: ASTBinaryFunctionNode.h  ASTListNode.h  ASTN_aryFunctionNode.h  ASTNode.h  ASTTernaryFunctionNode.h  ASTUnaryFunctionNode.h  ASTUserFunctionNode.h
headers/Utils/: stringConverter.h  utils.h
src/: main.cpp
src/Exceptions/: illegalCharacterException.cpp  illegalCharacterException.h  illegalSyntaxException.cpp  missingCharacterException.cpp
src/Interpreter/: interpreter.cpp
src/Interpreter/Literals/: concatenatedListLiteral.cpp  finiteListLiteral.cpp  fractionalNumberLiteral.cpp  functionDefinedListLiteral.cpp  infiniteListLiteral.cpp  listLiteral.cpp  literal.cpp  userDefinedListLiteral.cpp  wholeNumberLiteral.cpp
src/Lexer/: lexer.cpp  lexer.h
src/Lexer/Tokens/: argumentToken.cpp  argumentToken.h  fractionalNumberToken.cpp  fractionalNumberToken.h  functionNameToken.cpp  functionNameToken.h  token.cpp  token.h  wholeNumberToken.cpp  wholeNumberToken.h
src/ListFunc/: listFunc.cpp
src/Parser/: ASTNode.cpp  ASTTernaryFunctionNode.cpp  ASTUnaryFunctionNode.cpp  ASTUserFunctionNode.cpp  parser.cpp
src/Parser/Nodes/: ASTBinaryFunctionNode.cpp  ASTLeafNode.cpp  ASTListNode.cpp  ASTN_aryFunctionNode.cpp  ASTNode.cpp  ASTTernaryFunctionNode.cpp  ASTUnaryFunctionNode.cpp  ASTUserFunctionNode.cpp
src/Utils/: stringConverter.cpp  utils.cpp
test/: interpreterTests.cpp  lexerTests.cpp  parserTests.cpp
